--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@ h3 a:link, h3 a:visited, h3 a:active, h3 a:hover{
 </head>
 <body>
   <div class="main">
-  <h1>Shop</h1>
-  <h3><a href="/">my cart</a></h3>
-  <h2>Stuff</h2>
+  <h1>Bookworms</h1>
+  <h2>Books</h2>
   <div class="row">
     <a class="item" href="/">
       <div class="image" style="background-image: url(https://i.postimg.cc/kG2nG90k/JPEG-Bild-C9-EE86-A30950-4.jpg);"></div>
