--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ h3 a:link, h3 a:visited, h3 a:active, h3 a:hover{
   <h2>Books</h2>
   <div class="row">
     <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/kG2nG90k/JPEG-Bild-C9-EE86-A30950-4.jpg);"></div>
+      <div class="image" style="background-image: url(https://www.nicepng.com/png/full/10-101646_books-png.png);"></div>
       <p class="item_description">Plant</p>
     </a>
     <a class="item" href="/">
