--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@ h3 a:link, h3 a:visited, h3 a:active, h3 a:hover{
   <h2>Books</h2>
   <div class="row">
     <a class="item" href="/">
-      <div class="image" style="background-image: url(https://www.nicepng.com/png/full/10-101646_books-png.png);"></div>
+      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
       <p class="item_description">Plant</p>
     </a>
     <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/0Nxx17cM/JPEG-Bild-C9-EE86-A30950-2.jpg);"></div>
+      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
       <p class="item_description">Another Plant</p>
     </a>
     <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/2jq5wFJr/JPEG-Bild-C9-EE86-A30950-3.jpg);"></div>
+      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
       <p class="item_description">Little Plants</p>
     </a>
     <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/q7Rr7pH4/JPEG-Bild-C9-EE86-A30950-1.jpg);"></div>
+      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
       <p class="item_description">Phone Stand</p>
     </a>
   </div>
