--- a/index.html
+++ b/index.html
@@ -97,22 +97,23 @@ h3 a:link, h3 a:visited, h3 a:active, h3 a:hover{
   <div class="main">
   <h1>Bookworms</h1>
   <h2>Books</h2>
+  <h3>CSE</h3>
   <div class="row">
     <a class="item" href="/">
       <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">Plant</p>
+      <p class="item_description">SEM 1</p>
     </a>
     <a class="item" href="/">
       <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">Another Plant</p>
+      <p class="item_description">SEM 2</p>
     </a>
     <a class="item" href="/">
       <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">Little Plants</p>
+      <p class="item_description">SEM 3</p>
     </a>
     <a class="item" href="/">
       <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">Phone Stand</p>
+      <p class="item_description">SEM 4</p>
     </a>
   </div>
    
