--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@ code {
 <body>
   <div class="main">
    <div class="offset"> <h1>Bookworms</h1> </div>
-   <div class="slide"> <h2>Books</h2> </div>
-  <h3>CSE</h3>
+   <div class="slide"> <h2>CSE</h2> </div>
   <div class="row">
     <a class="item" href="/">
       <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
