--- a/index.html
+++ b/index.html
@@ -232,8 +232,10 @@ code {
 </head>
 <body>
   <div class="main">
-   <div class="offset"> <h1>Bookworms</h1> </div>
-   <div class="slide"> <h2>CSE</h2> </div>
+   <div class="buttons">  
+     <button class="offset"> <h1>Bookworms</h1>  </button>
+     <button class="offset"> <h2>CSE</h2> </button>
+    </div>
   <div class="row">
     <a class="item" href="/">
       <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
