--- a/index.html
+++ b/index.html
@@ -5,117 +5,119 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-  html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  margin: 0 auto;
-  font-family: Helvetica, Arial, sans-serif;
-  color: #333;
+nav {
+  margin: 27px auto 0;
+
+  position: relative;
+  width: 590px;
+  height: 50px;
+  background-color: #34495e;
+  border-radius: 8px;
+  font-size: 0;
 }
-.main {
-  width: 100%;
+nav a {
+  line-height: 50px;
   height: 100%;
-  background-color: #f2f2f2;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  font-size: 15px;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+}
+nav .animation {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: 0;
+  transition: all .5s ease 0s;
+  border-radius: 8px;
+}
+a:nth-child(1) {
+  width: 100px;
+}
+a:nth-child(2) {
+  width: 110px;
+}
+a:nth-child(3) {
+  width: 100px;
+}
+a:nth-child(4) {
+  width: 160px;
+}
+a:nth-child(5) {
+  width: 120px;
+}
+nav .start-home, a:nth-child(1):hover~.animation {
+  width: 100px;
+  left: 0;
+  background-color: #1abc9c;
+}
+nav .start-about, a:nth-child(2):hover~.animation {
+  width: 110px;
+  left: 100px;
+  background-color: #e74c3c;
+}
+nav .start-blog, a:nth-child(3):hover~.animation {
+  width: 100px;
+  left: 210px;
+  background-color: #3498db;
+}
+nav .start-portefolio, a:nth-child(4):hover~.animation {
+  width: 160px;
+  left: 310px;
+  background-color: #9b59b6;
+}
+nav .start-contact, a:nth-child(5):hover~.animation {
+  width: 120px;
+  left: 470px;
+  background-color: #e67e22;
+}
+
+body {
+  font-size: 12px;
+  font-family: sans-serif;
+  background: #2c3e50;
 }
 h1 {
-  margin: 0;
-  font-size: 40px;
-  margin-top: 35pt;
-  margin-left: 20pt;
-  font-weight: bold;
-}
-h2 {
-  margin: 0;
-  margin-left: 20pt;
-  margin-top: 30pt;
-  margin-bottom: 15pt;
-}
-h3 {
-  font-family: monospace;
-  font-weight: light;
-  margin: 0;
-  margin-left: 20pt;
-  margin-top: 15pt;
-  font-size: 16px;
-}
-h3 a:link, h3 a:visited, h3 a:active, h3 a:hover{
-  color: #333;
-}
-.row {
-  background-color: none;
-  width: calc(100% - 20pt);
-  height: 200pt;
-  margin-left: 20pt;
-  margin-bottom: 20pt;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space:nowrap
-}
-.item {
-  display: inline-block;
-  width: 250pt;
-  height: 200pt;
-  background-color: #fff;
-  border-radius: 6pt;
-  margin-right: 15pt;
-  transition: 0.2s ease-in-out;
-}
-.item:link, .item:visited, .item:active {
-  color: #333;
-  text-decoration: none;
-}
-.item:hover {
-  opacity: 0.75;
-  transform: scale(0.98);
-  color: #333;
-  text-decoration: none;
-}
-.image {
-  height: 150pt;
-  width: 250pt;
-  backgroud-color: #ddd;
-  border-radius: 6pt 6pt 0pt 0pt;
-  background-size: cover;
-  background-position: center center;
-}
-.item_description {
-  margin: 0;
-  padding-top: 18pt;
-  font-size: 17px;
-  margin-left: 10pt;
-  margin-right: 10pt;
   text-align: center;
-  font-family: monospace;
-} 
+  margin: 40px 0 40px;
+  text-align: center;
+  font-size: 30px;
+  color: #ecf0f1;
+  text-shadow: 2px 2px 4px #000000;
+  font-family: 'Cherry Swash', cursive;
+}
+
+p {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+    color: #ecf0f1;
+    font-family: 'Cherry Swash',cursive;
+    font-size: 16px;
+}
+
+span {
+    color: #2BD6B4;
+}
 </style>
 </head>
 <body>
-  <div class="main">
-   <h1>Bookworms</h1>  
-   <h2>CSE</h2> 
-   </div>
-  <div class="row">
-    <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">SEM 1</p>
-    </a>
-    <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">SEM 2</p>
-    </a>
-    <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">SEM 3</p>
-    </a>
-    <a class="item" href="/">
-      <div class="image" style="background-image: url(https://i.postimg.cc/zXddbYTG/black-book-icon-icons-com-49298.png);"></div>
-      <p class="item_description">SEM 4</p>
-    </a>
-  </div> 
-</div>
+<h1>Lavalamp CSS Menu</h1>
+
+<nav>
+  <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Blog</a>
+  <a href="#">Portefolio</a>
+  <a href="#">Contact</a>
+  <div class="animation start-home"></div>
+</nav>
   
 </body>
 </html>
