--- a/index.html
+++ b/index.html
@@ -108,13 +108,12 @@ span {
 </style>
 </head>
 <body>
-<h1>Lavalamp CSS Menu</h1>
+<h1>BOOKSWORMS</h1>
 
 <nav>
   <a href="#">Home</a>
-  <a href="#">About</a>
+  <a href="#">Btech</a>
   <a href="#">Blog</a>
-  <a href="#">Portefolio</a>
   <a href="#">Contact</a>
   <div class="animation start-home"></div>
 </nav>
