--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ span {
   <a href="#">Btech</a>
   <a href="#">Blog</a>
   <a href="#">Contact</a>
+  <a href="#">DMCA</a>
   <div class="animation start-home"></div>
 </nav>
   
