--- a/index.html
+++ b/index.html
@@ -201,27 +201,27 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   <div class="cards-list">
   
 <div class="card 1">
-  <div class="card_image"> <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> </div>
+  <div class="card_image"> <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" /> </div>
   <div class="card_title title-white">
-    <p>Card Title</p>
+    
   </div>
 </div>
 
   <div class="card 2">
   <div class="card_image">
-    <img src="https://cdn.blackmilkclothing.com/media/wysiwyg/Wallpapers/PhoneWallpapers_FloralCoral.jpg" />
+    <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
     </div>
   <div class="card_title title-white">
-    <p>Card Title</p>
+ 
   </div>
 </div>
 
 <div class="card 3">
   <div class="card_image">
-    <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" />
+    <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
   </div>
   <div class="card_title">
-    <p>Card Title</p>
+ 
   </div>
 </div>
   
@@ -230,7 +230,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
     </div>
   <div class="card_title title-black">
-    <p>Card Title</p>
+   
   </div>
   </div>
 
