--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   width: 300px;
   height: 300px;
   border-radius: 40px;
-  background-image: url('https://i.redd.it/b3esnz5ra34y.jpg');
+  background-image: url('https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -227,7 +227,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   
   <div class="card 4">
   <div class="card_image">
-    <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" />
+    <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
     </div>
   <div class="card_title title-black">
    
