--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 <div class="card 1">
   <div class="card_image"> <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" /> </div>
   <div class="card_title title-white">
-    
+    CSE
   </div>
 </div>
 
@@ -212,7 +212,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
     </div>
   <div class="card_title title-white">
- 
+ MECHANICAL
   </div>
 </div>
 
@@ -221,16 +221,16 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
   </div>
   <div class="card_title">
- 
+ CIVIL
   </div>
 </div>
   
-  <div class="card 4">
+  <div class="card 3">
   <div class="card_image">
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
     </div>
   <div class="card_title title-black">
-   
+   ECE
   </div>
   </div>
 
