--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 </style>
 </head>
 <body>
-<h1>BOOKSWORMS</h1>
+<h1>BOOKWORMS</h1>
 
 <nav>
   <a href="#">Home</a>
