--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 <div class="card 1">
   <div class="card_image"> <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" /> </div>
   <div class="card_title title-white">
-    CSE
+  B.TECH CSE
   </div>
 </div>
 
@@ -213,7 +213,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
     </div>
   <div class="card_title title-white">
- MECHANICAL
+B.TECH MECHANICAL
   </div>
 </div>
 
@@ -222,7 +222,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
   </div>
   <div class="card_title">
- CIVIL
+ B.TECH CIVIL
   </div>
 </div>
   
@@ -231,7 +231,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
     </div>
   <div class="card_title title-black">
-   ECE
+   B.TECH ECE
   </div>
   </div>
 
