--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ B.TECH MECHANICAL
   <div class="card_image">
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
   </div>
-  <div class="card_title">
+   <div class="card_title title-white">
  B.TECH CIVIL
   </div>
 </div>
@@ -230,7 +230,7 @@ B.TECH MECHANICAL
   <div class="card_image">
     <img src="https://cdn.dribbble.com/users/154752/screenshots/1244719/media/cd494e9a4cf4eaaa61b2c569066e71f9.gif" />
     </div>
-  <div class="card_title title-black">
+  <div class="card_title title-white">
    B.TECH ECE
   </div>
   </div>
