--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Bookworms</title>
+<title>BOOKWORMS LIBRARY</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -188,7 +188,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 </style>
 </head>
 <body>
-<h1>BOOKWORMS</h1>
+<h1>BOOKWORMS LIBRARY</h1>
 
 <nav>
   <a href="#">Home</a>
