--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ body {
   width: 100%;
   background: #3586ff;
   min-height: 100px;
-  padding: 20px 50px;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
