--- a/index.html
+++ b/index.html
@@ -186,7 +186,16 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 }
 */
   
- 
+ /* footer*/
+  footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    background-color: red;
+}
+  
 </style>
 </head>
 <body>
@@ -236,7 +245,17 @@ B.TECH MECHANICAL
   </div>
     
 </div>
-
+  
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <img alt="Brand" src="">
+      </a>
+    </div>
+  </div>
+</nav>
+    <footer></footer>
 
 </body>
 </html>
