--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ B.TECH MECHANICAL
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-    
+    Bookworms | All right Reserved
     </div>
   </div>
 </nav>
