--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@ B.TECH MECHANICAL
     
 </div>
   <footer>
+     <div class="footer-links-holder">  </div>
   <div class="bottom-bar">
       All Rights Reserved © 2020 | <a href="">Privacy Policy</a> | <a href="">Terms of Service</a>
   </div>
