--- a/index.html
+++ b/index.html
@@ -466,10 +466,10 @@ B.TECH MECHANICAL
     
 </div>
   <footer>
-     <div class="footer-links-holder">   <div class="centered clearfix"> </div> </div>
+     <div class="footer-links-holder">   <div class="centered clearfix"> 
   <div class="bottom-bar">
       All Rights Reserved © 2020 | <a href="">Privacy Policy</a> | <a href="">Terms of Service</a>
-  </div>
+  </div> </div> </div>
 </footer>
     
 </body>
