--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ B.TECH MECHANICAL
     </div>
     <div class="footer-navigation">
       <div class="footer-links-holder">
-        <h3><a href="">Section 3</a></h3>
+   xxx
       </div>
     </div>
   </div>
