--- a/index.html
+++ b/index.html
@@ -476,12 +476,12 @@ B.TECH MECHANICAL
     </div>
     <div class="footer-navigation">
       <div class="footer-links-holder">
-   xxx
+
       </div>
     </div>
   </div>
   <div class="bottom-bar">
-      All Rights Reserved © 2020
+     </br> All Rights Reserved © 2020  </br>
     </div>
 </center></footer>
     
