--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ B.TECH MECHANICAL
     </div>
   </div>
   <div class="bottom-bar">
-     </br> All Rights Reserved © 2020  </br>
+     </br> All Rights Reserved © 2020 </br></br>
     </div>
 </center></footer>
     
